--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,9 @@
 <body>
 
   <header>
-    <h1>RubyGems.Guide</h1>
-    <nav>
-      <a href="/">Home</a>
-    </nav>
+    <h1>
+      <a href="/">RubyGems.Guide</a>
+    </h1>
   </header>
 
   <main>
@@ -22,7 +21,7 @@
   </main>
 
   <footer>
-    <p>RubyGems.Guide</p>
+    <a href="/">RubyGems.Guide</a>
   </footer> 
 
 </body>
