--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
   --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 
   /* Body font size. By default, effectively 18.4px, based on 16px as 'root em' */
-  --base-fontsize: 1.15rem;
+  /* --base-fontsize: 1.15rem; */
+  --base-fontsize: 20px;
 
   /* Major third scale progression - see https://type-scale.com/ */
   --header-scale: 1.25;
@@ -15,21 +16,17 @@
   --line-height: 1.618;
 
   /* Default (dark) theme */
-  --bg: #212121;
-  --accent-bg: #2B2B2B;
-  --text: #DCDCDC;
+  --bg: #F2F2F2;
+  --accent-bg: #565655;
+  --text: #232323;
   --text-light: #ABABAB;
-  --border: #666;
-  --accent: #FFB300;
-  --accent-light: #ffb300b7;
+  --border: #232323;
+  --accent: #CC6C6F;
+  --accent-light: #EA8F90;
   --strong: #F06292;
   --preformatted: #CCC;
   --disabled: #111;
   --marked: #FFDD33;
-}
-
-img, video {
-  opacity: .6;
 }
 
 html {
@@ -57,10 +54,12 @@ body {
 
 /* Make the header bg full width, but the content inline with body */
 header {
-  background: var(--accent-bg);
-  border-bottom: 1px solid var(--border);
+  /* background: var(--accent-bg); */
+  /* background-color: #CC6C6F; */
+  background-color: #ad5153;
+  border-bottom: 2px solid var(--border);
   text-align: center;
-  padding: 2rem .5rem;
+  padding: 1rem 2rem;
   width: 100vw;
   position: relative;
   box-sizing: border-box;
@@ -68,6 +67,13 @@ header {
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+}
+
+main {
+  /* margin-top: 4rem; */
+  padding: 0 2rem 2rem 2rem;
+  border-left: 2px solid var(--border);
+  border-right: 2px solid var(--border);
 }
 
 
@@ -110,13 +116,51 @@ nav a.current:hover {
   text-decoration: none;
 }
 
+
+header {
+  /* position: fixed;
+  top: 0; */
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
+
+header h1 {
+  margin-top: auto;
+  margin-bottom: auto;
+  font-size: 2rem;
+}
+
+header h1 a {
+  /* color: var(--text) !important; */
+  color: white !important;
+  text-decoration: none;
+}
+
+header h1 a:hover {
+  background-color: unset;
+}
+
+header input {
+  width: auto;
+}
+
+header nav a {
+  margin: auto;
+}
+
 footer {
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
   padding: 2rem 1rem 1.5rem 1rem;
-  color: var(--text-light);
-  font-size: .9rem;
+  /* color: var(--text-light); */
+  color: #ad5153;
+  font-size: 1rem;
   text-align: center;
-  border-top: 1px solid var(--border);
+  /* border-top: 1px solid var(--border); */
+
+  border-top: 2px solid var(--border);
+  border-left: 2px solid var(--border);
+  border-right: 2px solid var(--border);
 }
 
 /* Format headers */
@@ -258,7 +302,7 @@ table {
 
 td,
 th {
-  border: 1px solid var(--border);
+  border: 2px solid var(--border);
   text-align: left;
   padding: .5rem;
 }
@@ -270,7 +314,8 @@ th {
 
 tr:nth-child(even) {
   /* Set every other cell slightly darker. Improves readability. */
-  background: var(--accent-bg);
+  /* background: var(--accent-bg); */
+  background-color: #E8E6E2;
 }
 
 table caption {
@@ -294,7 +339,7 @@ input {
   margin-bottom: .5rem;
   color: var(--text);
   background: var(--bg);
-  border: 1px solid var(--border);
+  border: 2px solid var(--border);
   border-radius: 5px;
   box-shadow: none;
   box-sizing: border-box;
@@ -395,7 +440,7 @@ fieldset {
 
 hr {
   color: var(--border);
-  border-top: 1px;
+  border-top: 2px;
   margin: 1rem auto;
 }
 
@@ -444,7 +489,8 @@ kbd,
 samp {
   font-size: 1.075rem;
   font-family: var(--mono-font);
-  color: #CE9178;
+  /* color: #CE9178; */
+  color: #ad5153;
 }
 
 strong {
@@ -453,7 +499,8 @@ strong {
 }
 
 code {
-  background-color: var(--accent-bg);
+  /* background-color: var(--accent-bg); */
+  background-color: #E8E6E2;
   padding-left: .5rem;
   padding-right: .5rem;
   padding-top: .1rem;
@@ -463,7 +510,7 @@ code {
 
 kbd {
   color: var(--preformatted);
-  border: 1px solid var(--preformatted);
+  border: 2px solid var(--preformatted);
   border-bottom: 3px solid var(--preformatted);
   border-radius: 5px;
   padding: .1rem;
@@ -475,8 +522,9 @@ pre {
   overflow: auto;
   overflow-x: auto;
   color: var(--preformatted);
-  background: var(--accent-bg);
-  border: 1px solid var(--border);
+  /* background: var(--accent-bg); */
+  background-color: #403D52;
+  border: 2px solid var(--border);
   border-radius: 5px;
 }
 
@@ -486,4 +534,13 @@ pre code {
   background: none;
   margin: 0;
   padding: 0;
+}
+
+section {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+section section {
+  width: 100%;
 }
