--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,15 @@
 
   <footer>
     <a href="/">RubyGems.Guide</a>
+
+    <div class="social">
+      <a href="https://twitter.com/hoppergeegee" target="_blank" class="twitter">
+        <img src="/images/social/twitter.png" alt="twitter">
+      </a>
+      <a href="https://github.com/rubygemsguide/rubygemsguide" target="_blank" class="github">
+        <img src="/images/social/github.png" alt="github">
+      </a>
+    </div>
   </footer> 
 
 </body>
