--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,12 @@
   </main>
 
   <footer>
-    <a href="/">RubyGems.Guide</a>
+    <a href="https://twitter.com/hoppergeegee" target="_blank" class="twitter">
+      <img src="/images/social/twitter.png" alt="twitter">
+    </a>
+    <a href="https://github.com/rubygemsguide/rubygemsguide" target="_blank" class="github">
+      <img src="/images/social/github.png" alt="github">
+    </a>
   </footer> 
 
 </body>
