--- a/css/home.scss
+++ b/css/home.scss
@@ -41,11 +41,14 @@
   }
 
   footer {
+    box-sizing: border-box;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     border-left: 0;
     border-right: 0;
+    display: flex;
+    justify-content: end;
   }
 }
