--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,10 @@
 
   <header>
     <h1>
-      <a href="/">RubyGems.Guide</a>
+      <a href="/" class="brand">
+        <img src="/images/logo-white.png" alt="logo" class="logo">
+        RubyGems.Guide
+      </a>
     </h1>
   </header>
 
