Add fingerprint to css and js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
   <meta name="msapplication-TileColor" content="#ad5153">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/{{ 'styles.css' | bust_css_cache }}">
+  <link rel="stylesheet" href="/css/{{ 'syntax.css' | bust_css_cache }}">
 </head>
 <body>
 
