--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/syntax.css">
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/{{ 'styles.css' | bust_css_cache }}">
+  <link rel="stylesheet" href="/css/{{ 'syntax.css' | bust_css_cache }}">
+  <link rel="stylesheet" href="/css/{{ 'home.css' | bust_css_cache }}">
 </head>
 <body class="home">
 
