Install jekyll-seo-tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
 
   <link rel="stylesheet" href="/css/{{ 'styles.css' | bust_css_cache }}">
   <link rel="stylesheet" href="/css/{{ 'syntax.css' | bust_css_cache }}">
+
+  {% seo %}
 </head>
 <body>
 
