--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="/css/{{ 'styles.css' | bust_css_cache }}">
   <link rel="stylesheet" href="/css/{{ 'syntax.css' | bust_css_cache }}">
   <link rel="stylesheet" href="/css/{{ 'home.css' | bust_css_cache }}">
+
+  {% seo %}
 </head>
 <body class="home">
 
