Add some scripts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,4 +29,6 @@ layout: application
     </div>
   </footer> 
 
+  <script async defer src="https://cloud.rubygems.guide/latest.js"></script>
+  <noscript><img src="https://cloud.rubygems.guide/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
