--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,4 +25,6 @@ layout: application
     </a>
   </footer> 
 
+  <script async defer src="https://cloud.rubygems.guide/latest.js"></script>
+  <noscript><img src="https://cloud.rubygems.guide/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
