Create the initial version /rest-man/request/get page

--- a/_sass/rest-man/home/advance-box.scss
+++ b/_sass/rest-man/home/advance-box.scss
@@ -12,6 +12,8 @@
   padding: 20px 10px;
   cursor: pointer;
   margin: -2px;
+  text-decoration: unset;
+  color: black;
 }
 
 .advance-box > a:hover {
