--- a/css/rest-man/home.scss
+++ b/css/rest-man/home.scss
@@ -172,7 +172,7 @@ footer {
   margin-top: auto;
 }
 
-@import "rest-man/request-box";
-@import "rest-man/arrow";
-@import "rest-man/response-box";
-@import "rest-man/advance-box";
+@import "rest-man/home/request-box";
+@import "rest-man/home/arrow";
+@import "rest-man/home/response-box";
+@import "rest-man/home/advance-box";
