--- a/_sass/rest-man/home/request-box.scss
+++ b/_sass/rest-man/home/request-box.scss
@@ -43,6 +43,8 @@
   margin-top: -2px;
   text-align: center;
   padding: 20px 0;
+  text-decoration: unset;
+  color: black;
 }
 .request-action:hover {
   background: $red-500;
@@ -58,6 +60,8 @@
   margin-left: -2px;
   text-align: center;
   padding: 30px 0;
+  text-decoration: unset;
+  color: black;
 }
 .request-headers:hover {
   background: $red-500;
@@ -75,6 +79,8 @@
   padding: 4px 16px;
   margin-right: -2px;
   background: $gray-50;
+  text-decoration: unset;
+  color: black;
 }
 .request-cookies:hover {
   background: $red-500;
@@ -91,6 +97,8 @@
   margin-bottom: -2px;
   text-align: center;
   padding: 30px 0;
+  text-decoration: unset;
+  color: black;
 }
 .request-body:hover {
   background: $red-500;
