--- a/_includes/rest-man/request-example.html
+++ b/_includes/rest-man/request-example.html
@@ -7,9 +7,11 @@
     <div class="http-method">{{ request.http_method }}</div>
     <div class="request-target">{{ request.request_target }}</div>
     <div class="http-version">{{ request.http_version }}</div>
-    {% for header in request.http_headers %}
-      <div class="http-header">{{ header }}</div>
-    {% endfor %}
+    <div class="http-headers">
+      {% for header in request.http_headers %}
+        <div class="http-header">{{ header }}</div>
+      {% endfor %}
+    </div>
   </div>
 
   <div class="code-box">
@@ -31,9 +33,11 @@
     <div class="http-version">{{ response.http_version }}</div>
     <div class="status-code">{{ response.status_code }}</div>
     <div class="status-text">{{ response.status_text }}</div>
-    {% for header in response.http_headers %}
-      <div class="http-header">{{ header }}</div>
-    {% endfor %}
+    <div class="http-headers">
+      {% for header in response.http_headers %}
+        <div class="http-header">{{ header }}</div>
+      {% endfor %}
+    </div>
     <div class="http-body">{{ response.http_body | escape }}</div>
   </div>
 </div>
