Make rest-man home page responsive

--- a/_sass/rest-man/home/advance-box.scss
+++ b/_sass/rest-man/home/advance-box.scss
@@ -1,9 +1,15 @@
 .advance-box {
   border: 2px solid black;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 2px;
+}
+@media (min-width: $xs) {
+  .advance-box {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .advance-box > a {
