--- a/_sass/rest-man/home/arrow.scss
+++ b/_sass/rest-man/home/arrow.scss
@@ -5,10 +5,16 @@
 */
 
 .arrow { 
+  display: none;
   width: 33.333333%;
   text-align: center;
   padding: 0 20px;
   color: $red-600;
+}
+@media (min-width: $xs) {
+  .arrow {
+    display: unset;
+  }
 }
 
 .arrow svg {
