--- a/css/rest-man/home.scss
+++ b/css/rest-man/home.scss
@@ -17,13 +17,14 @@
 
 html {
   font-family: var(--sans-font);
+  overflow: hidden;
 }
 
 body {
   background: $gray-50;
   font-size: 16px;
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   flex-direction: column;
   flex: 1;
   margin: 0 auto;
@@ -59,52 +60,83 @@ header {
 }
 
 .logo {
-  width: 32px;
+  width: 20px;
   margin-right: 0.5rem;
+  opacity: 0.75;
+}
+@media (min-width: $xs) {
+  .logo {
+    width: 32px;
+    opacity: 1;
+  }
 }
 
 header {
   display: flex;
-  justify-content: space-between;
-  justify-items: center;
-  position: relative;
+  flex-direction: column-reverse;
 }
-
-header h1 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: auto;
-  margin-bottom: auto;
-  font-size: 1rem;
-  z-index: 1;
-}
-
-@media (min-width: 768px) {
-  header h1 {
-    font-size: 2rem;
+@media (min-width: $xs) {
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
+    position: relative;
   }
 }
 
-header h1 a {
+header h1 {
+  display: none;
+  font-size: $text-sm;
+  color: $gray-200;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+@media (min-width: $xs) {
+  header h1 {
+    margin: unset;
+    display: unset;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: $text-2xl;
+    z-index: 1;
+  }
+}
+
+header h1 a, header h2 a{
   color: white !important;
   text-decoration: none;
 }
 
-header h1 a:hover {
+header h1 a:hover, header h2 a:hover {
   background-color: unset;
 }
 
 header h2 {
-  position: absolute;
-  width: 100%;
+  display: block;
   text-align: center;
   color: white;
-  top: 0;
-  height: 100%;
+  width: 100%;
+  margin: -8px 0 0 0;
+  font-size: 40px;
+}
+@media (min-width: $xs) {
+  header h2 {
+    margin: 15px 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    font-size: 1.5em;
+    height: 100%;
+  }
 }
 
 footer {
-  padding: 2rem 1rem 1.5rem 1rem;
+  padding: 10px;
   color: #ad5153;
   background-color: $gray-50;
   font-size: 1rem;
@@ -158,11 +190,28 @@ footer {
     }
   }
 }
+@media (min-width: $xs) {
+  footer {
+    padding: 2rem 1rem 1.5rem 1rem;
+  }
+}
+
+main {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
 
 .main-section {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  margin: 50px;
+  margin: 20px;
+}
+@media (min-width: $xs) {
+  .main-section {
+    flex-direction: row;
+    margin: 50px;
+  }
 }
 
 .advance-section {
@@ -170,6 +219,16 @@ footer {
   align-items: center;
   justify-content: center; 
   margin-top: auto;
+  margin-bottom: 80px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+@media (min-width: $xs) {
+  .advance-section {
+    margin-bottom: unset;
+    margin-left: unset;
+    margin-right: unset;
+  }
 }
 
 @import "rest-man/home/request-box";
