--- a/_sass/rest-man/post/sidebar.scss
+++ b/_sass/rest-man/post/sidebar.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  width: 240px;
+  width: 100%;
+  // width: 240px;
   border-right: 2px solid $stone-400;
   align-items: stretch;
-  height: 100%;
+  // height: 100%;
 
   h1 {
     padding-bottom: 10px;
@@ -39,12 +40,18 @@
   }
 
   .guides {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    display: none;
+  }
+  @media (min-width: $xs) {
+    .guides {
+      display: flex;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      overflow-y: scroll;
+      overflow-x: hidden;
+    }
   }
 
   /* width */
@@ -98,43 +105,54 @@
   }
 
   .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $stone-200;
-    padding: 20px 0;
-    margin-top: -2px;
-    margin-right: -2px;
-
-    a.twitter {
-      margin-right: 1rem;
+    display: none;
+  }
+  @media (min-width: $xs) {
+    .footer {
       display: flex;
       align-items: center;
-      opacity: 70%;
+      justify-content: center;
+      background-color: $stone-200;
+      padding: 20px 0;
+      margin-top: -2px;
+      margin-right: -2px;
 
-      &:hover {
-        background-color: unset;
-        opacity: 100%;
+      a.twitter {
+        margin-right: 1rem;
+        display: flex;
+        align-items: center;
+        opacity: 70%;
+
+        &:hover {
+          background-color: unset;
+          opacity: 100%;
+        }
+        
+        img {
+          width: 24px;
+        }
       }
-      
-      img {
-        width: 24px;
+
+      a.github {
+        display: flex;
+        align-items: center;
+        opacity: 70%;
+
+        &:hover {
+          background-color: unset;
+          opacity: 100%;
+        }
+        
+        img {
+          width: 24px;
+        }
       }
     }
-
-    a.github {
-      display: flex;
-      align-items: center;
-      opacity: 70%;
-
-      &:hover {
-        background-color: unset;
-        opacity: 100%;
-      }
-      
-      img {
-        width: 24px;
-      }
-    }
+  }
+}
+@media (min-width: $xs) {
+  .sidebar {
+    width: 240px;
+    height: 100%;
   }
 }
