--- a/_sass/rest-man/post/code-example.scss
+++ b/_sass/rest-man/post/code-example.scss
@@ -1,13 +1,18 @@
 .example-section {
+  --box-border-color: #{$zinc-700};
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr;
   border-top: 1px solid $gray-300;
   padding: 20px 0;
+  font-family: $font-mono;
 }
 @media (min-width: $xs) {
   .example-section {
+    grid-template-columns: clamp(260px, 40%, 300px) auto clamp(260px, 40%, 300px);
     padding: 30px 0;
+    max-width: $md;
+    margin: auto;
   }
 }
 
@@ -18,46 +23,59 @@
 */
 .request-box {
   order: 1;
-  grid-column: 1 / span 4;
-  border: 2px solid black;
+  grid-column: 1;
+  border: 2px solid var(--box-border-color);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 40px auto;
   gap: 2px;
+  box-shadow: $shadow-md;
+  border-radius: 6px;
+  overflow: hidden;
+  font-size: $text-sm;
 }
 @media (min-width: $xs) {
   .request-box {
-    order: 2;
     grid-column: 1;
-    grid-row: 2 / span 2;
-    max-width: 260px;
+    grid-row: 1;
+    min-width: 260px;
+    max-width: 300px;
   }
 }
 
 .http-method {
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   text-align: center;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .request-target {
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   text-align: center;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .http-version {
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   text-align: center;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .http-headers {
   grid-column: 1 / span 3;
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   padding: 10px;
   display: flex;
@@ -73,47 +91,83 @@
 
 /*
 #####
+# Arrow
+#####
+*/
+
+.request-arrow {
+  display: none;
+}
+@media (min-width: $xs) {
+  .request-arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 12px;
+    opacity: 0.75;
+  }
+}
+.request-arrow > svg {
+  width: 80%;
+}
+
+/*
+#####
 # Response
 #####
 */
 
 .response-box {
   order: 2;
-  grid-column: 1 / span 4;
+  grid-column: 1;
+  grid-row: 2;
   margin-top: 20px;
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 40px auto;
   gap: 2px;
+  box-shadow: $shadow-md;
+  border-radius: 6px;
+  overflow: hidden;
+  font-size: $text-sm;
 }
 @media (min-width: $xs) {
   .response-box {
-    order: 4;
-    grid-column: 4;
-    grid-row: 2 / span 2;
-    max-width: 260px;
+    order: 3;
+    grid-column: 3;
+    grid-row: 1;
+    min-width: 260px;
+    max-width: 300px;
     margin-top: 0;
   }
 }
 
 .status-code {
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   text-align: center;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .status-text {
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   text-align: center;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .http-body {
   grid-column: 1 / span 3;
-  border: 2px solid black;
+  border: 2px solid var(--box-border-color);
   margin: -2px;
   text-align: left;
   padding: 20px 10px;
@@ -128,28 +182,30 @@
 # Code
 #####
 */
-.request-code {
+
+.terminal {
   font-family: $font-mono;
 
-  order: 2;
-  grid-column: 1 / span 4;
+  order: 3;
+  grid-column: 1;
+  grid-row: 3;
 
   margin-bottom: 10px;
   font-size: $text-sm;
 
-  margin-top: 10px;
+  margin-top: 20px;
 
   box-shadow: $shadow-md;
   background-color: $gray-100;
-  border-radius: 4px;
+  border-radius: 6px;
+  overflow: hidden;
   text-wrap: nowrap;
 }
 @media (min-width: $xs) {
-  .request-code {
-    order: 1;
-    grid-column: 1 / span 4;
-    margin: auto;
-    margin-top: 0;
+  .terminal {
+    order: 4;
+    grid-column: 1 / span 3;
+    margin-top: 20px;
     margin-bottom: 30px;
   }
 }
@@ -194,57 +250,21 @@
   }
 }
 
-.request-arrow {
-  display: none;
-  width: 100%;
-  margin-top: 8px;
-  margin-bottom: 12px;
-}
-@media (min-width: $xs) {
-  .request-arrow {
-    display: unset;
-    grid-column: 2 / span 2;
-    grid-row: 2;
-  }
-}
-.request-arrow > svg {
-  width: 100%;
+.request-code {
+  padding: 5px;
+  margin-bottom: 10px;
+  font-weight: 700;
 }
 
 .response-code {
-  font-family: $font-mono;
-  order: 4;
-  grid-column: 1 / span 4;
   margin-top: 10px;
   display: grid;
-  border: 1px solid $gray-400;
-  border-radius: 4px;
-  overflow: hidden;
-  grid-template-columns: auto 50px auto;
-  font-size: 12px;
-}
-@media (min-width: $xs) {
-  .response-code {
-    order: 5;
-    grid-column: 2 / span 2;
-    grid-row: 3;
-    margin: auto;
-  }
-}
-
-.response-code-title {
-  border: 1px solid $gray-400;
-  margin: -1px;
-  padding: 5px;
-  grid-column: 1 / space 3;
-  background-color: $gray-100;
-  font-weight: 700;
+  grid-template-columns: fit-content(75%) 50px auto;
 }
 
 .code-call {
   grid-column: 1;
   padding: 5px;
-  border-bottom: 1px solid $gray-400;
   margin-bottom: -1px;
   font-weight: 700;
 }
@@ -252,7 +272,6 @@
 .code-output-indicator {
   grid-column: 2;
   padding: 5px;
-  border-bottom: 1px solid $gray-400;
   margin-bottom: -1px;
   color: $stone-500;
 }
@@ -260,7 +279,6 @@
 .code-output {
   grid-column: 3;
   padding: 5px;
-  border-bottom: 1px solid $gray-400;
   margin-bottom: -1px;
   color: $stone-500;
 }
