--- a/_sass/rest-man/post/code-example.scss
+++ b/_sass/rest-man/post/code-example.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr;
   border-top: 1px solid $gray-300;
   padding: 20px 0;
-  font-family: $font-mono;
+  font-family: $font-mono-reverse;
 }
 @media (min-width: $xs) {
   .example-section {
@@ -16,13 +16,24 @@
   }
 }
 
+.example-title {
+  order: 1;
+  grid-column: 1;
+  font-family: $font-mono;
+}
+@media (min-width: $xs) {
+  .example-title {
+    grid-column: 1 / span 3;
+  }
+}
+
 /*
 #####
 # Request
 #####
 */
 .request-box {
-  order: 1;
+  order: 2;
   grid-column: 1;
   border: 2px solid var(--box-border-color);
   display: grid;
@@ -36,8 +47,6 @@
 }
 @media (min-width: $xs) {
   .request-box {
-    grid-column: 1;
-    grid-row: 1;
     min-width: 260px;
     max-width: 300px;
   }
@@ -105,6 +114,8 @@
 }
 @media (min-width: $xs) {
   .request-arrow {
+    order: 3;
+    grid-column: 2;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -125,9 +136,8 @@
 */
 
 .response-box {
-  order: 2;
+  order: 4;
   grid-column: 1;
-  grid-row: 2;
   margin-top: 20px;
   border: 2px solid var(--box-border-color);
   display: grid;
@@ -143,7 +153,6 @@
   .response-box {
     order: 3;
     grid-column: 3;
-    grid-row: 1;
     min-width: 260px;
     max-width: 300px;
     margin-top: 0;
@@ -192,9 +201,8 @@
 .terminal {
   font-family: $font-mono;
 
-  order: 3;
+  order: 5;
   grid-column: 1;
-  grid-row: 3;
 
   margin-bottom: 10px;
   font-size: $text-sm;
@@ -209,7 +217,6 @@
 }
 @media (min-width: $xs) {
   .terminal {
-    order: 4;
     grid-column: 1 / span 3;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -260,6 +267,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font-family: $font-mono;
 }
 .terminal-tab.active {
   cursor: default;
@@ -271,46 +279,14 @@
   padding: 1rem 10px;
   overflow: auto;
   overflow-x: auto;
+  background-color: $gray-100;
+  line-height: 1.5;
 }
 @media (min-width: $xs) {
   .terminal-body {
-    padding: 1rem;
+    padding: 0.25rem 1rem 0.5rem 1rem;
   }
 }
 .terminal-body.active {
   display: block;
-}
-
-.request-code {
-  padding: 5px;
-  margin-bottom: 10px;
-  font-weight: 700;
-  line-height: 1.75;
-}
-
-.response-code {
-  margin-top: 10px;
-  display: grid;
-  grid-template-columns: fit-content(75%) 50px auto;
-}
-
-.code-call {
-  grid-column: 1;
-  padding: 5px;
-  margin-bottom: -1px;
-  font-weight: 700;
-}
-
-.code-output-indicator {
-  grid-column: 2;
-  padding: 5px;
-  margin-bottom: -1px;
-  color: $stone-500;
-}
-
-.code-output {
-  grid-column: 3;
-  padding: 5px;
-  margin-bottom: -1px;
-  color: $stone-500;
 }
