--- a/css/rest-man/syntax-highlight.css
+++ b/css/rest-man/syntax-highlight.css
@@ -1,3 +1,7 @@
+pre.highlight {
+  padding: 4px 12px;
+  border-radius: 6px;
+}
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
