--- a/_sass/rest-man/post/code-example.scss
+++ b/_sass/rest-man/post/code-example.scss
@@ -15,7 +15,7 @@
     margin: auto;
   }
 }
-#example-1 {
+.example-section:nth-of-type(2n+1) {
   border-top-color: transparent;
   padding-top: 0;
 }
